crates/monty/tests/heap_reader_compile_fail_cases/heap_mutation_while_reading.stderr
error[E0107]: function takes 0 generic arguments but 1 generic argument was supplied
   --> crates/monty/src/../tests/heap_reader_compile_fail_cases/cases.rs:27:13
    |
 27 |     let _ = allocate_string::<crate::resource::NoLimitTracker>;
    |             ^^^^^^^^^^^^^^^----------------------------------- help: remove the unnecessary generics
    |             |
    |             expected 0 generic arguments
    |
note: function defined here, with 0 generic parameters
   --> crates/monty/src/types/str.rs:117:8
    |
117 | pub fn allocate_string(
    |        ^^^^^^^^^^^^^^^
    = note: `impl Trait` cannot be explicitly specified as a generic argument
For more information about this error, try `rustc --explain E0107`.
